--- a/basic/nginx-node/Dockerfile
+++ b/basic/nginx-node/Dockerfile
@@ -10,5 +10,6 @@ RUN apt-get update \
  && wget https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-x64.tar.gz \
  && tar -xvf "node-v$NODE_VERSION-linux-x64.tar.gz" -C /usr/local --strip-components=1 \
  && ln -s /usr/local/bin/node /usr/local/bin/nodejs
+ && npm install cnpm -g
 
 CMD [ "node" ]
